# little-timmy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  action.yml  pyproject.toml
.github/: test.yml
.github/workflows/: publish.yml  publish_action_container.yml  publish_module.yml  test.yml  test_action.yml  test_module.yml
github_action/: Dockerfile  entrypoint.sh
little_timmy/: __main__.py  config_loader.py  duplicated_var_finder.py  taml.py  unused_var_finder.py  utils.py  var_finder.py
tests/: ansible_vault_password  test_repos.py
tests/repos/alternate_layout/: unused_vars
tests/repos/alternate_layout/repo/group_vars/: SERVERS.yaml  STORAGE.yml  all.yml
tests/repos/alternate_layout/repo/playbooks/: playbook-something.yml
tests/repos/config_file_skip/: unused_vars
tests/repos/config_file_skip/repo/: .little-timmy
tests/repos/config_file_skip/repo/inventory/: local.yml
tests/repos/custom_config_globs/: unused_vars
tests/repos/custom_config_globs/repo/: .little-timmy  unused_playbook.yml
tests/repos/custom_config_globs/repo/config/: unused_template.txt  used_template.txt.j2
tests/repos/custom_config_globs/repo/playbooks/: used_playbook.yml
tests/repos/custom_filter/: unused_vars
tests/repos/custom_filter/repo/: playbook.yml
tests/repos/custom_filter/repo/filter_plugins/: filters.py
tests/repos/custom_filter/repo/group_vars/: all.yml
tests/repos/custom_filter/repo/inventory/: local.yml
tests/repos/duplicate/: duplicated_vars  unused_vars
tests/repos/duplicate/repo/: playbook.yml
tests/repos/duplicate/repo/group_vars/: LEVEL1.yml  LEVEL2.yaml  LEVEL4.yaml  all.yml
tests/repos/duplicate/repo/host_vars/: hostb.yml
tests/repos/duplicate/repo/inventory/: local.yml
tests/repos/github_action/: duplicated_vars
tests/repos/github_action/repo/: collection_requirements.yml
tests/repos/github_action/repo/galaxy_role/: role_requirements.yml
tests/repos/no_deps/: unused_vars
tests/repos/no_deps/repo/: .little-timmy  playbook.yml
tests/repos/no_unused/repo/: playbook.yml
tests/repos/substrings/: unused_vars
(+30 files in other folders)
