[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "little-timmy"
version = "0.4.0"
description = "Little Timmy will try their best to find those unused Ansible variables."
readme = "README.md"
authors = [{ name = "Huw" }]
license = { file = "LICENSE" }

dependencies = ["ansible >= 3.0.0", "jsonschema >= 4.18.5"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/hoo29/little-timmy"

[project.scripts]
little-timmy = "little_timmy.__main__:main"

[project.optional-dependencies]
tests = ["pytest"]
build = ["build"]

[tool.setuptools]
packages = ["little_timmy"]
